--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 venv/
+
+
+        <video id="video" autoplay muted playsinline loop controls 
+            style="width: 100%; height: 100vh; object-fit: contain;">
+            <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
