--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 venv/
 
 
-        <video id="video" autoplay muted playsinline loop controls 
-            style="width: 100%; height: 100vh; object-fit: contain;">
-            <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+  <!-- Carousel Start -->
+    <div class="container-fluid p-0 mb-5">
+        {% for first_image in first_images %}
+        <div class="owl-carousel-item position-relative">
+            <!-- Video with Italian-style elegance -->
+
+            <video autoplay muted playsinline loop style="object-fit: cover; width: 100%; height: 130vh;" controls>
+                <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            
+        </div>
+
+        {% endfor %}
+    </div>
+    <!-- Carousel End -->
